--- a/ChordPlayer/app/src/main/res/layout/fragment_first.xml
+++ b/ChordPlayer/app/src/main/res/layout/fragment_first.xml
@@ -118,4 +118,19 @@
         app:layout_constraintStart_toEndOf="@+id/toggleButton_flat"
         app:layout_constraintTop_toBottomOf="@+id/spinner_colour" />
 
+    <EditText
+        android:id="@+id/editTextSetBPM"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginRight="56dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_change_chord"
+        app:layout_constraintTop_toBottomOf="@+id/button_add" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
