--- a/ChordPlayer/app/src/main/res/layout/fragment_first.xml
+++ b/ChordPlayer/app/src/main/res/layout/fragment_first.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
         android:text="@string/button_add"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="120dp"
         android:background="@android:drawable/btn_dropdown"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,16 +64,17 @@
 
     <Spinner
         android:id="@+id/spinner_colour"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginRight="56dp"
         android:background="@android:drawable/btn_dropdown"
         android:entries="@array/colour_spinner"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.409"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_play" />
 
@@ -116,7 +117,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/button_change_chord"
         app:layout_constraintStart_toEndOf="@+id/toggleButton_flat"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_colour" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_root_note" />
 
     <EditText
         android:id="@+id/editTextSetBPM"
