--- a/ChordPlayer/app/src/main/res/layout/fragment_first.xml
+++ b/ChordPlayer/app/src/main/res/layout/fragment_first.xml
@@ -37,13 +37,14 @@
 
     <Button
         android:id="@+id/button_play"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
         android:text="@string/button_play"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
     <Button
@@ -102,7 +103,7 @@
         android:id="@+id/horizontalScrollView"
         android:layout_width="300dp"
         android:layout_height="169dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="56dp"
         android:background="#DFDFDF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -129,7 +130,7 @@
 
     <EditText
         android:id="@+id/editTextSetBPM"
-        android:layout_width="0dp"
+        android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
@@ -138,8 +139,18 @@
         android:hint="@string/setBPM_autofillHint"
         android:importantForAutofill="no"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/spinner_root_note"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="58dp"
+        android:text="@string/bpm_text"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/editTextSetBPM"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
