--- a/ChordPlayer/app/src/main/res/layout/fragment_first.xml
+++ b/ChordPlayer/app/src/main/res/layout/fragment_first.xml
@@ -45,7 +45,7 @@
         android:text="@string/button_play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/chord_view" />
 
     <Button
         android:id="@+id/button_add"
@@ -99,24 +99,6 @@
         app:layout_constraintStart_toEndOf="@+id/spinner_root_note"
         app:layout_constraintTop_toBottomOf="@+id/button_play" />
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="300dp"
-        android:layout_height="169dp"
-        android:layout_marginTop="56dp"
-        android:background="#DFDFDF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:id="@+id/linearLayout_chords"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal" />
-    </HorizontalScrollView>
-
     <Button
         android:id="@+id/button_change_chord"
         android:layout_width="0dp"
@@ -140,7 +122,7 @@
         android:importantForAutofill="no"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/chord_view" />
 
     <TextView
         android:id="@+id/textView"
@@ -151,6 +133,16 @@
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/editTextSetBPM"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/chord_view" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chord_view"
+        android:layout_width="300dp"
+        android:layout_height="169dp"
+        android:layout_marginTop="56dp"
+        android:background="#EFEFEF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
