--- a/ChordPlayer/app/src/main/res/values/dimens.xml
+++ b/ChordPlayer/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="list_item_height">60dp</dimen>
+    <dimen name="margin_medium">2dp</dimen>
 </resources>
