--- a/ChordPlayer/app/src/main/res/menu/menu_main.xml
+++ b/ChordPlayer/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,15 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_save"
+        android:actionLayout="@layout/action_save_window"
+        android:orderInCategory="102"
+        android:title="@string/action_save"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_load"
+        android:orderInCategory="101"
+        android:title="@string/action_load"
+        app:showAsAction="never" />
 </menu>
